Bug 297223 - Unable to modify account '<<account name>>'. Cause: Invalid transaction id ''
Summary: Unable to modify account '<<account name>>'. Cause: Invalid transaction id ''
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-01 08:31 UTC by kdemeoz
Modified: 2014-07-29 05:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kdemeoz 2012-04-01 08:31:26 UTC
This error occurs every time, for Investment accounts. 

If i initiate the "New Account Setup" dialog box, & fill in the relevant / desired fields, including an Initial Balance > $0, i can successfully complete the account creation. However, because the "Notes" field in the "General" tab is not present in that initial Setup dialog, i then need to Edit my new Account [let's call it "XYZ"], which opens the "Edit Account 'XYZ' dialog. If i enter ANY text into the now-available "Notes" field in the "General" tab, & then click OK, i get the error "Unable to modify account 'XYZ'. Cause: Invalid transaction id ''" ... 100% of the time.

My workaround [also works 100% of the time, but it's annoying to have to have a workaround at all], is: 
1. Go to Ledger for the newly created account & Delete the initial transaction [which was automatically created as a result of having set an initial balance in the initial dialog].
2. Relaunch the Edit account dialog ... this time after I re-type all my text entered into the "Notes" field in the "General" tab IS accepted, ie, no error msg occurs. 
3. However, of course, this way my Initial Balance is still Zero ... so i then need to go the Ledger & manually make an initial transaction.

Pls can this apparent Bug be fixed? It IS convenient being able to enter the Initial Balance during account setup, BUT currently there's no point doing that if i know that i have useful account Notes info that i will be entering into that field. 

ALSO, as well as fixing the Bug, an enhancement would be to make the "Notes" field visible & active directly in the "New Account Setup" dialog box ... this would eliminate some wasted user steps.

PS: The Bug above occurs when the new Account type is *Investment*. It does not seem to occur if I create other types. 

Thanks, Steffie.
Comment 1 Cristian Oneț 2014-07-28 15:01:22 UTC
I can confirm this.
Comment 2 Cristian Oneț 2014-07-29 05:39:30 UTC
Git commit 02c86bf718b5f2a85e4f465db896ec87e6797752 by Cristian Oneț.
Committed on 29/07/2014 at 05:30.
Pushed by conet into branch 'master'.

Allow the user to edit details of investments with initial balance.

The opening balance transaction id should be cleared when the opening
balance is not editable. Otherwise we will try to remove an empty
transaction while updating the balance transaction which would cause
an error.

If the opening balance transaction of categories should not be edited
while editing the details hide the field also when creating a new
category.

M  +1    -0    kmymoney/dialogs/knewaccountdlg.cpp
M  +1    -1    kmymoney/dialogs/knewaccountdlgdecl.ui
M  +3    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/02c86bf718b5f2a85e4f465db896ec87e6797752
Comment 3 Cristian Oneț 2014-07-29 05:40:12 UTC
Git commit 93a65f1905008f62703494565704b6bf06976cc5 by Cristian Oneț.
Committed on 29/07/2014 at 05:30.
Pushed by conet into branch 'frameworks'.

Allow the user to edit details of investments with initial balance.

The opening balance transaction id should be cleared when the opening
balance is not editable. Otherwise we will try to remove an empty
transaction while updating the balance transaction which would cause
an error.

If the opening balance transaction of categories should not be edited
while editing the details hide the field also when creating a new
category.
(cherry picked from commit 02c86bf718b5f2a85e4f465db896ec87e6797752)

M  +1    -0    kmymoney/dialogs/knewaccountdlg.cpp
M  +1    -1    kmymoney/dialogs/knewaccountdlgdecl.ui
M  +3    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/93a65f1905008f62703494565704b6bf06976cc5
Comment 4 Cristian Oneț 2014-07-29 05:41:40 UTC
For the enhancement you suggested please open a wish.